==> tqf-888/86_djysrc/bsp/cpudrv/arterytek/src/timer/cpu_peri_timer.c <==
#include "stdint.h"
#include "stddef.h"
#include "cpu_peri.h"
#include "int.h"
#include "cpu.h"
#include "cpu_peri_int_line.h"
#include "timer_hard.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_TIMER          false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_TIMER_DIV      250     //这里设置分频系数，芯片主频250M，分配系数250M的话，定时器的频率就是1M
#define CN_PIT_MAX_COUNTER     0xFFFFFFFF
#define CN_PIT_MAX_TIME_US     (0xFFFFFFFF/__AT32Timer_GetFreq(0)/1000*1000)  //0xFFFFFFFF/84Mhz=1us
#define tagTimerReg tmr_type
#define CN_AT32TIMER_NUM   (EN_AT32TIMER_5 +1)
#define CN_AT32TIMER_MAX    EN_AT32TIMER_5
#define CN_AT32TIMER_BITMAP_MSK  (0x80000000)  //最高位为1，依次右移即可

bool_t AT32Timer_Time2Counter(u64 time, u64 *counter)
{

    u64 counter_1=time*__AT32Timer_GetFreq(0)/(1000*1000);
    *counter = counter_1 > CN_PIT_MAX_COUNTER ? CN_PIT_MAX_COUNTER : counter_1;

    if(*counter == counter_1)
        return true;

    return false;

}

bool_t AT32Timer_Counter2Time(u64 counter,u64 *time)
{
    u32 time_1=counter/__AT32Timer_GetFreq(0)/(1000*1000);
    if(time_1 > CN_PIT_MAX_TIME_US)
    {
        *time = CN_PIT_MAX_TIME_US;
        return false;
    }
    else
    {
        *time = time_1;
        return true;
    }
}

bool_t ModuleInstall_HardTimer(void)
{
    struct TimerChip  STM32timer;

    // RCC->APB1ENR |=RCC_APB1ENR_TIM2EN|RCC_APB1ENR_TIM5EN;  //外设时钟使能将TIM2、5使能
    /* enable tmr2 clock */
    crm_periph_clock_enable(CRM_TMR2_PERIPH_CLOCK, TRUE);
    /* enable tmr5 clock */
    crm_periph_clock_enable(CRM_TMR5_PERIPH_CLOCK, TRUE);
    u8 i;

    for(i=0;i<CN_AT32TIMER_NUM;i++)
    {
        tmr_counter_enable(tg_TIMER_Reg[i], FALSE);
        tmr_32_bit_function_enable(tg_TIMER_Reg[i], TRUE);
        tmr_period_buffer_enable(tg_TIMER_Reg[i], TRUE);
        tmr_interrupt_enable(tg_TIMER_Reg[i], TMR_OVF_INT , TRUE);
        tmr_div_value_set(tg_TIMER_Reg[i], CFG_TIMER_DIV - 1);
	    tmr_period_value_set(tg_TIMER_Reg[i], CN_PIT_MAX_COUNTER);
        // tg_TIMER_Reg[i]->CR1 &= ~(TIM_CR1_CEN); //禁止TIMER，这里为什么要禁止TIMER???
        //                                         //如果定时器中断属性设为实时中断，则用户实现的中断服务函数ISR中必须清
        //                                         //中断，且不能调用任何系统服务；如果设定为异步信号，则
        //                                         //无须清中断，且允许调用全部系统调用。
        // tg_TIMER_Reg[i]->CR1 |= TIM_CR1_ARPE;//自动重装
        // tg_TIMER_Reg[i]->DIER |= TIM_DIER_UIE;  //使能更新中断
        // tg_TIMER_Reg[i]->PSC = 0;    //分频系数为零，不分频，CK_CNT=CK_PSC频率，1/84M=1uS,84MHZ=84 000 000
        //                                                      //1s=1000ms  1ms=1000us
        // tg_TIMER_Reg[i]->ARR = 0xFFFFFFFF;      //定时器预装初值,计数最大值
    }

    STM32timer.chipname = "AT32TIMER";
    STM32timer.HardTimerAlloc = __AT32Timer_Alloc;     //分配定时器
    STM32timer.HardTimerFree = __AT32Timer_Free;       //释放定时器
    STM32timer.HardTimerCtrl = __AT32Timer_Ctrl;       //控制定时器
    STM32timer.HardTimerGetFreq = __AT32Timer_GetFreq; //获取定时器计数频率，84Mhz

    HardTimer_RegisterChip(&STM32timer);                //注册定时器芯片到系统定时器模块

    return true;
}
