==> tqf-888/86_djysrc/bsp/cpudrv/imxrt/1050/src/timer/cpu_peri_timer.c <==
#include <stdbool.h>
#include "stdio.h"
#include "cpu_peri_timer.h"
#include "cpu_peri_int_line.h"
#include "int.h"
#include "djyos.h"
#include "timer_hard.h"
#include "fsl_gpt.h"
#include "fsl_clock.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_TIMER    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define EXAMPLE_GPT_CLOCK_SOURCE_SELECT (0U)
#define EXAMPLE_GPT_CLOCK_DIVIDER_SELECT (0U)
#define EXAMPLE_GPT_CLOCK_DIV            (3U)
#define EXAMPLE_GPT_CLK_FREQ (CLOCK_GetFreq(kCLOCK_IpgClk) / (EXAMPLE_GPT_CLOCK_DIVIDER_SELECT + 1U))
#define EXAMPLE_GPT_CLOCK_FREQ           ((EXAMPLE_GPT_CLK_FREQ/EXAMPLE_GPT_CLOCK_DIV)/100000)  //单位：MHZ
#define CN_PIT_MAX_COUNTER     0xFFFFFFFF
#define CN_PIT_MAX_TIME_US     (0xFFFFFFFF/EXAMPLE_GPT_CLOCK_FREQ)
#define CN_CHANNEL              kGPT_OutputCompare_Channel1
#define CN_INTEERUPT            kGPT_OutputCompare1InterruptEnable
#define CN_INTEERUPT_FLAG       kGPT_OutputCompare1Flag
#define CN_TIMER_NUM   (EN_TIMER_2 +1)
#define CN_TIMER_MAX    EN_TIMER_2
#define CN_TIMER_BITMAP_MSK  (0x80000000)  //最高位为1，依次右移即可

bool_t __Time2Counter(u64 time, u64 *counter)
{

    u64 counter_1=time*EXAMPLE_GPT_CLOCK_FREQ;
    *counter = counter_1 > CN_PIT_MAX_COUNTER ? CN_PIT_MAX_COUNTER : counter_1;

    if(*counter == counter_1)
        return true;

    return false;

}

bool_t __Counter2Time(u64 counter,u64 *time)
{
    u32 time_1=counter/EXAMPLE_GPT_CLOCK_FREQ;
    if(time_1 > CN_PIT_MAX_TIME_US)
    {
        *time = CN_PIT_MAX_TIME_US;
        return false;
    }
    else
    {
        *time = time_1;
        return true;
    }
}

bool_t ModuleInstall_HardTimer(void)
{
    struct TimerChip  timer;
    gpt_config_t gptConfig;
    u8 i;

    /*Clock setting for GPT*/
    CLOCK_SetMux(kCLOCK_PerclkMux, EXAMPLE_GPT_CLOCK_SOURCE_SELECT);
    CLOCK_SetDiv(kCLOCK_PerclkDiv, EXAMPLE_GPT_CLOCK_DIVIDER_SELECT);
    GPT_GetDefaultConfig(&gptConfig);

    for(i=0;i<CN_TIMER_NUM;i++)
    {
        GPT_Init((tagTimerReg*)tg_TIMER_Reg[i], &gptConfig);
        GPT_SetClockDivider((tagTimerReg*)tg_TIMER_Reg[i], EXAMPLE_GPT_CLOCK_DIV);
        GPT_SetOutputCompareValue((tagTimerReg*)tg_TIMER_Reg[i], CN_CHANNEL, 0XFFFFFFFF);
        GPT_EnableInterrupts((tagTimerReg*)tg_TIMER_Reg[i], CN_INTEERUPT);
        GPT_StopTimer((tagTimerReg*)tg_TIMER_Reg[i]);
    }

    timer.chipname = "TIMER";
    timer.HardTimerAlloc = __Timer_Alloc;     //分配定时器
    timer.HardTimerFree = __Timer_Free;       //释放定时器
    timer.HardTimerCtrl = __Timer_Ctrl;       //控制定时器
    timer.HardTimerGetFreq = __Timer_GetFreq; //获取定时器计数频率

    HardTimer_RegisterChip(&timer);                //注册定时器芯片到系统定时器模块

    return true;
}
